extends BaseLevel
class_name Levelllbt
@onready var stop_1: CollisionShape2D = $wall/stop1
@onready var level_text: Label = $LevelText
@onready var bbg: ColorRect = $bbg



func _ready() -> void:
	if Global.LLBTLevel >= PlayerData.player_data["玲珑宝塔层数"]:
		if not Global.LLBTWXMS:
			PlayerData.player_data["玲珑宝塔层数"] = Global.LLBTLevel
	if Global.LLBTLevel == 24 or Global.LLBTLevel == 6 or Global.LLBTLevel == 12 or Global.LLBTLevel == 18:#根据层数设置遮挡透明度
		bbg.modulate = Color(1,1,1,1)
	else:
		bbg.modulate = Color(1,1,1,0)
	if Global.LLBTWXMS:
		Global.LLBTLevel = 25
		level_text.text = "∞"
		self.level_stage = 1
	else:
		level_text.text = str(Global.LLBTLevel)
		if Global.LLBTLevel == 24:
			self.level_stage = 30
	Global.CurrentLevel = "玲珑宝塔"
	Global.addBGM_(self,"res://Music/level/music_emsd.mp3")
	super._ready()
	if Global.LLBTCGMS:
		if Global.LLBTLevel != 1:
			RoleProp.roleprop.Hp = RoleProp.CurrentHp
			RoleProp.roleprop.Mp = RoleProp.CurrentMp
	MonsterList_()
func _physics_process(_delta: float) -> void:
	change_mysee()
	if current_stage >= 1:
		if not is_two_scene:
			if Monster_group["stage_2"].size() == 0 and Monster_group["stage_3"].size() == 0 and Monster_group["stage_4"].size() == 0:
				if one_check_can_exit():
					exit.visible = true
					exit_2.disabled = false
					add_tg(level_stage)
	if can_exit:
		RoleProp.CurrentHp = RoleProp.roleprop.Hp
		RoleProp.CurrentMp = RoleProp.roleprop.Mp
		if Input.is_action_just_pressed("Exit"):
			if Global.LLBTBOSSMS:
				get_tree().change_scene_to_file("res://Scene/Level/victory.tscn")
			elif Global.LLBTCGMS:
				if Global.LLBTLevel == 24:
					PlayerData.player_data["玲珑宝塔层数"] = 25
					get_tree().change_scene_to_file("res://Scene/Level/victory.tscn")
				else:
					if Global.LLBTLevel < 24:
						Global.LLBTLevel += 1
					get_tree().change_scene_to_file("res://Scene/Level/Level_llbt.tscn")
			elif Global.LLBTWXMS:
				get_tree().change_scene_to_file("res://Scene/Level/Level_llbt.tscn")
					
	if Role_ == null:
		if my_camera != null:
			my_camera.queue_free()
	set_through()
func set_through():
	my_camera.max_right = 1500
func _on_create_control_timeout() -> void:
	if Role_ != null:
		current_stage = 1

	if check_can_create(current_stage):
		level_create_monster(current_stage)

func MonsterList_():
	if Global.LLBTWXMS:
		Monster_group = {
			"stage_1": [97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,
			97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,
			97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99
			,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99],
			"stage_2": [],
			"stage_3": [],
			"stage_4": [],
		}
		Monster_position_x = {
			"stage_1": [250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,],
			"stage_2": [],
			"stage_3": [],
			"stage_4": [],
		}
		Monster_position_y = {
			"stage_1": [420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220],
			"stage_2": [],
			"stage_3": [],
			"stage_4": [],
		}
		return
	match Global.LLBTLevel:
		6:
			Monster_group = {
				"stage_1": [100],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_x = {
				"stage_1": [850],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_y = {
				"stage_1": [425],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			return
		12:
			Monster_group = {
				"stage_1": [101],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_x = {
				"stage_1": [850],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_y = {
				"stage_1": [425],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			return
		18:
			Monster_group = {
				"stage_1": [102],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_x = {
				"stage_1": [850],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_y = {
				"stage_1": [425],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			return
		24:
			Monster_group = {
				"stage_1": [103],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_x = {
				"stage_1": [850],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			Monster_position_y = {
				"stage_1": [425],
				"stage_2": [],
				"stage_3": [],
				"stage_4": [],
			}
			return

	Monster_group = {
		"stage_1": [97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,
			97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,97,98,99,],
		"stage_2": [],
		"stage_3": [],
		"stage_4": [],
	}
	Monster_position_x = {
		"stage_1": [250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,
			250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,250,500,750,],
		"stage_2": [],
		"stage_3": [],
		"stage_4": [],
	}
	Monster_position_y = {
		"stage_1": [420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,
			420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220,420,420,220],
		"stage_2": [],
		"stage_3": [],
		"stage_4": [],
	}
